src/objects/SBQQ__ContractedPrice__c.object
<CustomObject>
    <customHelpPage>SBQQ__ContractedPriceHelp</customHelpPage>
    <description>Contracted (negotiated) price for a product for a given customer account.</description>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <description>Account for which this price was negotiated.</description>
        <inlineHelpText>Account for which this price was negotiated.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>R00N70000001olI5EAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales contract that governs this price.</description>
        <inlineHelpText>Sales contract that governs this price.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for the Contracted Price</description>
        <inlineHelpText>Description for this Contracted Price. This will be copied into &quot;Special Price Description&quot; of Quote line items using this price.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Volume discount schedule to use for this product with this customer.</description>
        <inlineHelpText>Volume discount schedule to use for this product with this customer.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount off the list price (percent) represented by this Contracted Price. Either this field or Price should be set but not both.</description>
        <inlineHelpText>Discount off the Price Book price (percent) represented by this Contracted Price. Either this field or Price should be set but not both.</inlineHelpText>
        <label>Discount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveDate__c</fullName>
        <description>Effective date for this contracted price.</description>
        <inlineHelpText>Date this contracted price becomes effective.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Expiration date for this contracted price.</description>
        <inlineHelpText>Date this contracted price expires.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterField__c</fullName>
        <description>Quote line field that&apos;s evaluated to determine if this contracted price applies.</description>
        <inlineHelpText>Select a field to use in a filter, such as Product Family, if you want to apply this price to a set of products. If you are using a custom field, add the API name to the Filter Field as a picklist value.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Value the filter field is tested against to determine if this contracted price should apply.</description>
        <inlineHelpText>Value the filter field is tested against to determine if this contracted price should apply.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks the line covered by this price as non-discountable. Overrides Non Discountable flag on the product.</description>
        <inlineHelpText>Select the checkbox to disallow further discounting of this product.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>Operator used to evaluate Filter Field value against Filter Value.</description>
        <inlineHelpText>Select the operate to use when matching the contents of the Filter Field with the Filter Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Line that originated this Contracted Price.</description>
        <inlineHelpText>The Quote Line that originated this Contracted Price.</inlineHelpText>
        <label>Original Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <description>Actual price that was negotiated. This value will override any other price such as the one from a price book or a volume-discounted price.</description>
        <inlineHelpText>Enter the price that has been negotiated with the customer. This value will override any other price such as the one from a price book or a volume-discounted price.</inlineHelpText>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which this price was negotiated.</description>
        <inlineHelpText>Select a product from any price book that you want to apply to this discount.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contracted Price</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Contracted Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracted Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Discount_or_price_required</fullName>
        <active>true</active>
        <description>Requires either Discount, Price, or Discount Schedule be entered.</description>
        <errorConditionFormula>AND(ISBLANK(SBQQ__Discount__c),ISBLANK(SBQQ__Price__c), ISBLANK(SBQQ__DiscountSchedule__c))</errorConditionFormula>
        <errorMessage>You must enter either Discount, Price, or Discount Schedule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Either_product_or_filter</fullName>
        <active>true</active>
        <description>Either product or filter must be specified; not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__Product__c)),NOT(ISPICKVAL(SBQQ__FilterField__c,&apos;&apos;)))</errorConditionFormula>
        <errorMessage>You may not specify both product and filter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Filter_requires_operators</fullName>
        <active>true</active>
        <description>Operator must be entered when filter is specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__Operator__c,&apos;&apos;),NOT(ISPICKVAL(SBQQ__FilterField__c,&apos;&apos;)))</errorConditionFormula>
        <errorMessage>Operator is required when Filter Field is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Product_or_filter_required</fullName>
        <active>true</active>
        <description>Requires that product or filter be specified.</description>
        <errorConditionFormula>AND(ISBLANK(SBQQ__Product__c),ISPICKVAL(SBQQ__FilterField__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>You must specify either product or filter field</errorMessage>
    </validationRules>
</CustomObject>